--- a/estilos.css
+++ b/estilos.css
@@ -18,6 +18,13 @@ body {
   vertical-align: middle;
   pointer-events: none;
 }
+.fotoportada {
+  height: 320px;
+  margin: 0 20px;
+  align-content: center;
+  vertical-align: middle;
+  pointer-events: none;
+}
 .contenedor-corazones {
   position: fixed; left:0; top:0; width:100vw; height:100%; min-height:100vh; pointer-events:none; z-index:2;
 }
