--- a/estilos.css
+++ b/estilos.css
@@ -273,3 +273,10 @@ main, .contenedor-boda, section, .frases-esposos, .final-boda, .ceremonia-bloc, 
   transition: opacity .15s;
 }
 .lightbox-close:hover { opacity: 1; }
+.wrapper-fotoportada {
+  width: 100vw;
+  max-width: 100vw;
+  overflow: hidden;
+  margin: 0 auto;
+  display: block;
+}
